maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:10: error: Boolean does not take parameters
    }else (a==2){
                ^